/texts endpoint (Paginated list) (#51)
* Modified /texts/{id} and /texts/batch endpoints to only return published manifestations

* /texts endpoint implementing paging over published records
